# filename-validation

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/: codecov.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  greetings.yml
src/filename_validation/: __init__.py  cli.py
tests/: test_cli.py
